# foodfleet

./: README.md  nx.json  package-lock.json  package.json  tsconfig.json
.cursor/: mcp.json
.github/workflows/: ci.yml
apps/backend/: README.md  docker-compose.yml  project.json  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: __init__.py  router.py
apps/backend/app/api/endpoints/: __init__.py  ping.py
apps/backend/app/application/: __init__.py
apps/backend/app/application/ping/: __init__.py  dto.py  service.py
apps/backend/app/core/: __init__.py  config.py
apps/backend/app/domain/: __init__.py
apps/backend/app/domain/ping/: __init__.py
apps/backend/app/domain/ping/entities/: __init__.py  ping.py
apps/backend/app/domain/ping/repositories/: __init__.py  ping_repository.py
apps/backend/app/infrastructure/: __init__.py
apps/backend/app/infrastructure/database/: __init__.py  config.py  models.py
apps/backend/app/infrastructure/repositories/: __init__.py  ping_repository.py
apps/foodfleet-landing/: jest.config.ts  package.json  tsconfig.json
apps/foodfleet-landing-e2e/: cypress.config.ts  package.json
apps/foodfleet-landing-e2e/src/e2e/: app.cy.ts
apps/landing/: package.json  project.json  tsconfig.json
apps/landing-e2e/: cypress.config.ts  package.json  project.json
apps/landing-e2e/src/e2e/: app.cy.ts
apps/landing-e2e/src/support/: commands.ts
apps/landing/src/app/: page.tsx
apps/mobile/: env.js  package.json  project.json
